# triversi

./: CLAUDE.md  Cargo.toml  README.md  index.html
src/: .tags  board.rs  cli.rs  game.rs  gui_app.rs  lib.rs  tui_app.rs
src/app/: board_display.rs  system.rs  tui.rs
src/app/board_display/: paragraph_board.rs
src/board/: availables.rs  count.rs  history.rs  player.rs
src/game/: action.rs  message.rs  status.rs
src/tui_app/: board_display.rs  color_config.rs  key_binding.rs  render.rs
src/tui_app/board_display/: paragraph_board.rs
