[package]
name = "triversi"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.2.0"
description = "Triversi: Reversi-like game played by 3 players."
repository = "https://github.com/yu1guana/triversi"
license-file = "LICENSE"
readme = "README.md"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
anyhow = "1.0"
clap = {version = "4.6", features = ["derive"]}
derive-new = "0.7"
getset = "0.1"
serde = "1.0"
serde_derive = "1.0"
termion = "4.0"
thiserror = "2.0"
tui = { version = "0.19", default-features = false, features = ['termion'] }
unicode-width = "0.2"

[features]
default = []
alternative_key_binding = []
