[package]
name = "triversi"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.2.0"
description = "Triversi: Reversi-like game played by 3 players."
repository = "https://github.com/yu1guana/triversi"
license-file = "LICENSE"
readme = "README.md"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
anyhow = "1.0"
getset = "0.1"
thiserror = "2.0"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }

# TUI frontend dependencies, plus native-only eframe windowing backends.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.6", features = ["derive"] }
termion = "4.0"
tui = { version = "0.19", default-features = false, features = ['termion'] }
unicode-width = "0.2"
eframe = { version = "0.34", default-features = false, features = ["wayland", "x11"] }

# WebAssembly entry-point helpers for the egui/eframe GUI.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[features]
default = []
alternative_key_binding = []
